--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist/**/*"
   ],
   "scripts": {
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' jest",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' env IS_TESTING=true jest",
     "test:watch": "jest --watch",
     "build": "rollup -c",
     "start": "rollup -c -w",
@@ -19,10 +19,6 @@
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
     "@kubevious/ui-components": "^1.0.10",
     "@kubevious/ui-framework": "^1.0.10",
     "@kubevious/ui-middleware": "^1.0.4",
@@ -32,10 +28,13 @@
     "@types/bootstrap": "^5.0.5",
     "@types/jest": "^26.0.20",
     "bootstrap": "^4.5.0",
-    "d3": "^6.5.0",
+    "classnames": "^2.2.6",
+    "codemirror": "^5.54.0",
     "jest": "^26.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "react-codemirror2": "^7.2.1",
+    "react-color": "^2.19.3",
     "the-lodash": "^2.0.0",
     "the-promise": "^2.0.4",
     "ts-jest": "^26.5.2",
@@ -45,11 +44,13 @@
     "@rollup/plugin-json": "^4.1.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@types/d3": "^6.3.0",
+    "@types/classnames": "^2.2.11",
+    "@types/codemirror": "0.0.108",
     "@types/jest": "^26.0.20",
     "@types/jquery": "^3.5.5",
     "@types/node": "^14.6.0",
     "@types/react": "^17.0.2",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.1",
     "@types/should": "^13.0.0",
     "@types/uuid": "^8.3.0",
@@ -60,8 +61,8 @@
     "eslint": "^7.7.0",
     "identity-obj-proxy": "^3.0.0",
     "prettier": "^2.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rollup": "^2.39.1",
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-typescript2": "^0.25.3",
