--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/classnames": "^2.2.11",
-    "@types/codemirror": "0.0.108",
+    "@types/codemirror": "^0.0.108",
     "@types/jest": "^26.0.20",
     "@types/jquery": "^3.5.5",
     "@types/node": "^14.6.0",
