--- a/package.json
+++ b/package.json
@@ -19,28 +19,20 @@
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kubevious/ui-components": "^1.0.10",
-    "@kubevious/ui-framework": "^1.0.10",
-    "@kubevious/ui-middleware": "^1.0.4",
-    "@rollup/plugin-typescript": "^8.2.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@types/bootstrap": "^5.0.5",
-    "@types/jest": "^26.0.20",
-    "bootstrap": "^4.5.0",
+    "@kubevious/ui-components": "^1.0.23",
+    "@kubevious/ui-framework": "^1.0.13",
+    "@kubevious/ui-middleware": "^1.0.9",
     "classnames": "^2.2.6",
     "codemirror": "^5.54.0",
-    "jest": "^26.0.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
     "react-codemirror2": "^7.2.1",
     "react-color": "^2.19.3",
-    "the-lodash": "^2.0.0",
-    "the-promise": "^2.0.4",
-    "ts-jest": "^26.5.2",
-    "uuid": "^8.3.2"
+    "the-lodash": "^2.0.8"
   },
   "devDependencies": {
+    "ts-jest": "^26.5.2",
+    "jest": "^26.0.0",
+    "@rollup/plugin-typescript": "^8.2.0",
     "@rollup/plugin-json": "^4.1.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -53,7 +45,6 @@
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.1",
     "@types/should": "^13.0.0",
-    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.10.0",
     "@typescript-eslint/parser": "^3.10.0",
     "babel-core": "^6.26.3",
