--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
     "classnames": "^2.2.6",
     "codemirror": "^5.54.0",
     "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "react-codemirror2": "^7.2.1",
     "react-color": "^2.19.3",
-    "the-lodash": "^2.0.8",
-    "node-sass": "^4.14.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-scss": "^2.6.1"
+    "rollup-plugin-scss": "^2.6.1",
+    "the-lodash": "^2.0.8"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
