--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "codemirror": "^5.54.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "postcss": "^8.2.8",
     "react-codemirror2": "^7.2.1",
     "react-color": "^2.19.3",
     "rollup-plugin-babel": "^4.4.0",
