--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "start": "rollup -c -w",
     "format": "prettier --write ./src/ ./test/",
     "format-check": "prettier --write ./src/ ./test/",
-    "lint": "eslint"
+    "lint": "eslint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kubevious/ui-components": "^1.0.56",
+    "@kubevious/ui-components": "^1.0.66",
     "@kubevious/ui-framework": "^1.0.40",
-    "@kubevious/ui-middleware": "^1.0.23",
+    "@kubevious/ui-middleware": "^1.0.24",
+    "bootstrap": "^5.0.0-beta3",
     "classnames": "^2.2.6",
     "codemirror": "^5.54.0",
     "jquery": "^3.5.1",
@@ -42,6 +45,10 @@
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@storybook/addon-actions": "^6.2.8",
+    "@storybook/addon-essentials": "^6.2.8",
+    "@storybook/addon-links": "^6.2.8",
+    "@storybook/react": "^6.2.8",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/classnames": "^2.2.11",
@@ -56,6 +63,7 @@
     "@typescript-eslint/eslint-plugin": "^3.10.0",
     "@typescript-eslint/parser": "^3.10.0",
     "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-runtime": "^6.26.0",
     "eslint": "^7.7.0",
     "identity-obj-proxy": "^3.0.0",
@@ -64,7 +72,9 @@
     "rollup": "^2.39.1",
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-typescript2": "^0.25.3",
+    "sass-loader": "^10.1.1",
     "should": "^13.2.3",
+    "storybook-css-modules-preset": "^1.0.8",
     "ts-jest": "^26.5.2",
     "ts-node": "^9.0.0",
     "tslib": "^2.1.0",
