--- a/package.json
+++ b/package.json
@@ -22,18 +22,16 @@
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kubevious/ui-components": "^1.0.72",
+    "@kubevious/ui-components": "^1.0.93",
     "@kubevious/ui-framework": "^1.0.40",
     "@kubevious/ui-middleware": "^1.0.24",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.0.0",
     "classnames": "^2.2.6",
     "codemirror": "^5.54.0",
-    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "postcss": "^8.2.8",
     "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
-    "react-color": "^2.19.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
