--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kubevious/ui-components": "^1.0.94",
+    "@kubevious/ui-components": "^1.0.95",
     "@kubevious/ui-framework": "^1.0.40",
     "@kubevious/ui-middleware": "^1.0.25",
     "bootstrap": "^5.0.0",
@@ -32,6 +32,7 @@
     "postcss": "^8.2.8",
     "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
+    "react-color": "^2.19.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
