fixes to rule editor related to logic redesign.

--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "format": "prettier --write ./src/ ./test/",
     "format-check": "prettier --write ./src/ ./test/",
     "lint": "eslint",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s ./public,./node_modules/@kubevious/entity-meta/public,./node_modules/@kubevious/ui-components/public -p 6006",
     "build-storybook": "build-storybook"
   },
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kubevious/ui-components": "^1.0.159",
+    "@kubevious/entity-meta": "^1.0.18",
+    "@kubevious/ui-components": "^1.0.169",
     "@kubevious/ui-framework": "^1.0.50",
-    "@kubevious/ui-middleware": "^1.0.38",
+    "@kubevious/ui-middleware": "^1.0.39",
     "bootstrap": "^5.0.0",
     "classnames": "^2.2.6",
     "codemirror": "^5.54.0",
