--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@kubevious/entity-meta": "^1.0.42",
     "@kubevious/ui-components": "^1.0.182",
     "@kubevious/ui-framework": "^1.0.50",
