--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@kubevious/entity-meta": "^1.0.56",
+    "@kubevious/state-registry": "^1.0.13",
     "@kubevious/ui-components": "^1.0.220",
     "@kubevious/ui-framework": "^1.0.59",
     "@kubevious/ui-middleware": "^1.0.61",
